--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -537,19 +537,19 @@ table th {
   text-align: left;
 }
 li {
-  color: #000000;
+  /* color: #000000; */
   font-size: 12pt;
   font-family: "Calibri";
 }
 p {
   margin: 0;
-  color: #000000;
+  /* color: #000000; */
   font-size: 12pt;
   font-family: "Calibri";
 }
 h1 {
   padding-top: 24pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 24pt;
   padding-bottom: 6pt;
@@ -562,7 +562,7 @@ h1 {
 }
 h2 {
   padding-top: 0pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 18pt;
   padding-bottom: 0pt;
@@ -574,7 +574,7 @@ h2 {
 }
 h3 {
   padding-top: 14pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 14pt;
   padding-bottom: 4pt;
@@ -587,7 +587,7 @@ h3 {
 }
 h4 {
   padding-top: 12pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 12pt;
   padding-bottom: 2pt;
@@ -600,7 +600,7 @@ h4 {
 }
 h5 {
   padding-top: 11pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 11pt;
   padding-bottom: 2pt;
@@ -613,7 +613,7 @@ h5 {
 }
 h6 {
   padding-top: 10pt;
-  color: #000000;
+  /* color: #000000; */
   font-weight: 700;
   font-size: 10pt;
   padding-bottom: 2pt;
